--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "sass": "^1.92.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "eslint": "^9.35.0",
     "globals": "^16.4.0",
     "jiti": "^2.5.1",
+    "phaser": "^3.90.0",
     "prettier": "^3.6.2",
+    "typescript": "^5.9.2",
     "typescript-eslint": "^8.44.0"
   }
 }
