[UPDATE] Update .env.example with backend configuration variables for local development

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,16 @@
+# Backend environment example (keep a local `.env` on your machine)
+# bind host for the server (0.0.0.0 to allow LAN access)
+HOST=0.0.0.0
+
+# port used by the backend
+PORT=3000
+
+# optional public URL you might get from ngrok or a domain. If set, the mobile client
+# will use this as the default Server URL. Leave empty to use the current host.
+SERVER_URL=
+
+# optional default room name for the mobile client
+DEFAULT_ROOM=test-room
 # Example environment variables for local development
 DB_HOST=localhost
 DB_PORT=5432
