--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "pg": "^8.16.3",
+  "bcryptjs": "^2.4.3",
+  "jsonwebtoken": "^9.0.2",
     "sass": "^1.92.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
