[UPDATE]Clarify SERVER_URL usage in .env.example for better understanding

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,8 +6,9 @@ HOST=0.0.0.0
 PORT=3000
 
 # optional public URL you might get from ngrok or a domain. If set, the mobile client
-# will use this as the default Server URL. Leave empty to use the current host.
-SERVER_URL=
+# will use this as the default Server URL. 
+# COMMENT OUT OR LEAVE EMPTY to enable auto-detection of all available URLs
+# SERVER_URL=https://your-ngrok-url.ngrok-free.dev
 
 # optional default room name for the mobile client
 DEFAULT_ROOM=test-room
