--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build:game": "esbuild src/RoomGameController.ts --bundle --outfile=public/game.js --format=iife --global-name=GameController",
+    "watch:game": "esbuild src/RoomGameController.ts --bundle --outfile=public/game.js --format=iife --global-name=GameController --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "phaser": "^3.90.0"
+  },
+  "devDependencies": {
+    "esbuild": "^0.25.11"
+  }
 }
