--- a/package.json
+++ b/package.json
@@ -16,24 +16,25 @@
     "@types/pg": "^8.15.5",
     "@types/socket.io": "^3.0.1",
     "@types/socket.io-client": "^1.4.36",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
-  "bcryptjs": "^2.4.3",
-  "jsonwebtoken": "^9.0.2",
     "sass": "^1.92.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "eslint": "^9.35.0",
     "globals": "^16.4.0",
     "jiti": "^2.5.1",
     "phaser": "^3.90.0",
     "prettier": "^3.6.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2",
-  "typescript-eslint": "^8.44.0",
-  "ts-node-dev": "^2.0.0"
+    "typescript-eslint": "^8.44.0"
   }
 }
