--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,8 @@
     "build": "tsc -p tsconfig.json",
     "start": "node dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "migrate:profile": "ts-node src/migrate-profile.ts",
+    "migrate:game-history": "ts-node src/migrate-game-history.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
